2009-01-25  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2009-01-22  Uros Bizjak  <ubizjak@gmail.com>

	PR target/38931
	* config/i386/i386.md (*movsi_1): Use type "mmx" for alternative 2.
	(*movdi_1_rex64): Use type "mmx" for alternative 5.

	2009-01-21  Uros Bizjak  <ubizjak@gmail.com>

	PR rtl-optimization/38879
	* alias.c (base_alias_check): Unaligned access via AND address can
	alias all surrounding object types except those with sizes equal
	or wider than the size of unaligned access.

2009-01-25  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2008-12-02  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/38359
	* fold-const.c (fold_binary): Fold -1 >> x to -1 only for
	non-negative x.

2009-01-24  Eric Botcazou  <ebotcazou@adacore.com>

	* config/sparc/linux.h (DBX_REGISTER_NUMBER): Delete.
	* config/sparc/linux64.h (DBX_REGISTER_NUMBER): Likewise.
	* config/sparc/sysv4.h (DBX_REGISTER_NUMBER): Likewise.

2009-01-24  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/38902
	Backport from mainline:
	2008-12-23  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/i386.c (expand_movmem_via_rep_mov): Set MEM_SIZE
	correctly.
	(expand_setmem_via_rep_stos): Add ORIG_VALUE argument.  If
	ORIG_VALUE is const0_rtx and COUNT is constant, set MEM_SIZE
	on DESTMEM.
	(ix86_expand_setmem): Adjust callers.

2008-01-24  Richard Guenther  <rguenther@suse.de>

	* BASE-VER: Set to 4.3.4.
	* DEV-PHASE: Set to prerelease.

2009-01-24  Release Manager

	* GCC 4.3.3 released.

2009-01-20  Joseph Myers  <joseph@codesourcery.com>

	PR other/38758
	* longlong.h: Update copyright years.  Use soft-fp license notice.

2009-01-19  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2008-07-11  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/36765
	* tree-ssa-alias.c (compute_flow_insensitive_aliasing): Add
	aliases from HEAP vars to SMTs.

2009-01-17  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
