@@ -1,3 +1,8 @@
+2008-01-26  Paolo Bonzini  <bonzini@gnu.org>
+
+	PR tree-optimization/38932
+	* gcc.dg/pr38932.c: New.
+
 2009-01-26  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/38907
